Fixed resize, need to fix text spacing then challenge format

--- a/public/Tuiter/explore.css
+++ b/public/Tuiter/explore.css
@@ -1,5 +1,10 @@
 /** Things mentioned in Preamble for Explore */
 
+/** Piazza mentioned override */
+.nav{
+    width: 100%;
+}
+
 .wd-borders-specific{
     border-color: rgb(47, 51, 54);
     border-style: solid
